WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273270
REGRESSION (
277275@main
): [ MacOS ] TestWebKitAPI.WebKit.AutoLayoutIntegration is a mostly consistent timeout
https://bugs.webkit.org/show_bug.cgi?id=273270
Summary
REGRESSION (277275@main): [ MacOS ] TestWebKitAPI.WebKit.AutoLayoutIntegratio...
Jay Stfleur
Reported
2024-04-25 13:41:35 PDT
Description: TestWebKitAPI.WebKit.AutoLayoutIntegration Is a consistent timeout on Sonoma, it is consistently passing on Monterey and Ventura arm64 but it's still fairly consistently timing our everywhere else after changes on
277275@main
Buildbot URL:
https://build.webkit.org/#/builders/926/builds/2584/steps/19/logs/stdio
History:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WebKit.AutoLayoutIntegration
Reproducibility: not able to reproduce using spade but I was able to reproduce the timeout using Webkit build.
Attachments
[fast-cq]Patch
(1.49 KB, patch)
2024-04-25 15:41 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-25 13:41:59 PDT
<
rdar://problem/127071756
>
zalan
Comment 2
2024-04-25 15:41:46 PDT
Created
attachment 471143
[details]
[fast-cq]Patch
EWS
Comment 3
2024-04-26 09:21:46 PDT
Committed
278042@main
(a05d9bc0b540): <
https://commits.webkit.org/278042@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 471143
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug