REGRESSION (277275@main): [ MacOS ] TestWebKitAPI.WebKit.AutoLayoutIntegration is a mostly consistent timeout https://bugs.webkit.org/show_bug.cgi?id=273270 <rdar://problem/127071756>

Reviewed by Antti Koivisto.

Autosize mode eagerly schedules layout even when there's no current document yet.

* Source/WebCore/page/LocalFrameViewLayoutContext.cpp:
(WebCore::LocalFrameViewLayoutContext::scheduleLayout):

Canonical link: https://commits.webkit.org/278042@main